--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes" />
     <meta name="theme-color" content="#667eea" />
     <meta name="description" content="Complete Budget, Savings & Expense Calculator with Beautiful Charts" />
     <title>Budget Calculator - Complete Financial Management</title>
